# TreeNotes

./: .gitignore  CMakeLists.txt  README.md  configure_cmake.sh  rr.sh
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: main.qml
package/contents/ui/config/: configGeneral.qml
plugin/: CMakeLists.txt  displaykdirmodel.cpp  displaykdirmodel.h  notemodel.cpp  notemodel.h  qmldir  treenotesplugin.cpp  treenotesplugin.h
